--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,5 @@
 FROM kprasch/rust-python:3.9.9
+USER circleci
 
 # Set the working directory to /app
 WORKDIR /app
@@ -7,10 +8,9 @@ WORKDIR /app
 COPY . .
 
 # Install any needed packages specified in requirements.txt
-USER circleci
 RUN sudo apt-get update && sudo apt-get install -y git python3-pip
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
 
 # Run app.py when the container launches
-CMD ["python3", "main.py"]
+CMD ["python3", "tacospy/main.py"]
