run tdec checks for both lynx and tapir

--- a/deploy/.env.template
+++ b/deploy/.env.template
@@ -1,7 +1,10 @@
-DEMO_ENRICO_PRIVATE_KEY=
-DEMO_L1_PROVIDER_URI=
-DEMO_L2_PROVIDER_URI=
-DEMO_DOMAIN=
-DEMO_RITUAL_ID=
-DEMO_DKG_PUBLIC_KEY=
-
+TAPIR_DEMO_ENRICO_PRIVATE_KEY=
+LYNX_DEMO_ENRICO_PRIVATE_KEY=
+GOERLI_PROVIDER_URI=
+SEPOLIA_PROVIDER_URI=
+MUMBAI_PROVIDER_URI=
+TAPIR_RITUAL_ID=
+LYNX_RITUAL_ID=
+TAPIR_DEMO_DKG_PUBLIC_KEY=
+LYNX_DEMO_DKG_PUBLIC_KEY=
+TACOSPY_INVENTORY_PATH=/app/deploy/inventory.yml
