--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,113 @@
 -i https://pypi.org/simple
-aiohttp==3.8.2
-aiosignal==1.3.1 ; python_version >= '3.7'
+aiohttp==3.8.1; python_version >= '3.6'
+aiosignal==1.2.0; python_version >= '3.6'
 appdirs==1.4.4
-async-timeout==4.0.3 ; python_version >= '3.7'
-attrs==23.1.0 ; python_version >= '3.7'
-autobahn==23.6.2 ; python_version >= '3.9'
-automat==22.10.0
-bitarray==2.8.2
-blinker==1.6.3 ; python_version >= '3.7'
+async-timeout==4.0.2; python_version >= '3.6'
+attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+autobahn==22.3.2; python_version >= '3.7'
+automat==20.2.0
+base58==2.1.1; python_version >= '3.5'
+bitarray==1.2.2
 bytestring-splitter==2.4.1
 cached-property==1.5.2
-certifi==2023.7.22 ; python_version >= '3.6'
-cffi==1.16.0 ; python_version >= '3.8'
-charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
-click==8.1.7 ; python_version >= '3.7'
-colorama==0.4.6 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
-constant-sorrow==0.1.0a9 ; python_version >= '3'
+certifi==2021.10.8; python_version >= '3.6'
+cffi==1.15.0; python_version >= '3.8'
+charset-normalizer==2.0.12; python_full_version >= '3.5.0'
+click==8.1.2; python_version >= '3.7'
+colorama==0.4.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+constant-sorrow==0.1.0a9; python_version >= '3'
 constantly==15.1.0
-cryptography==41.0.5 ; python_version >= '3.7'
-cytoolz==0.12.2 ; python_version >= '3.6'
-dateparser==1.1.8 ; python_version >= '3.7'
-eth-abi==4.2.1 ; python_full_version >= '3.7.2' and python_version < '4'
-eth-account==0.8.0 ; python_version >= '3.6' and python_version < '4'
-eth-bloom==2.0.0 ; python_version >= '3.7' and python_version < '4'
-eth-hash[pycryptodome]==0.5.2 ; python_version >= '3.7' and python_version < '4'
-eth-keyfile==0.6.1
-eth-keys==0.4.0
-eth-rlp==0.3.0 ; python_version >= '3.7' and python_version < '4'
-eth-tester==0.9.1b1 ; python_full_version >= '3.6.8' and python_version < '4'
-eth-typing==3.5.1 ; python_full_version >= '3.7.2' and python_version < '4'
-eth-utils==2.3.0 ; python_version >= '3.7' and python_version < '4'
-flask==3.0.0
-frozenlist==1.4.0 ; python_version >= '3.8'
-hendrix==4.0.0
-hexbytes==0.3.1
-humanize==4.8.0 ; python_version >= '3.8'
+construct==2.10.68; python_version >= '3.6'
+cryptography==36.0.2; python_version >= '3.6'
+cytoolz==0.11.2; implementation_name == 'cpython'
+dateparser==1.1.1; python_version >= '3.5'
+ecdsa==0.18.0b2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+eth-abi==2.1.1; python_version >= '3.6' and python_version < '4'
+eth-account==0.5.7; python_version >= '3.6' and python_version < '4'
+eth-bloom==1.0.4; python_version >= '3.6' and python_version < '4'
+eth-hash[pycryptodome]==0.3.2; python_version >= '3.5' and python_version < '4'
+eth-keyfile==0.5.1
+eth-keys==0.3.4
+eth-rlp==0.2.1; python_version >= '3.6' and python_version < '4'
+eth-tester==0.6.0b6; python_version < '4' and python_full_version >= '3.6.8'
+eth-typing==2.3.0; python_version >= '3.5' and python_version < '4'
+eth-utils==1.10.0; python_version >= '3.5' and python_version < '4' and python_full_version != '3.5.2'
+flask==2.1.1; python_version >= '3.7'
+frozenlist==1.3.0; python_version >= '3.7'
+hendrix==3.4.0
+hexbytes==0.2.2; python_version >= '3.6' and python_version < '4'
+humanize==4.0.0; python_version >= '3.7'
 hyperlink==21.0.0
-idna==3.4 ; python_version >= '3.5'
-incremental==22.10.0
-itsdangerous==2.1.2 ; python_version >= '3.7'
-jinja2==3.1.2 ; python_version >= '3.7'
-jsonschema==4.19.1 ; python_version >= '3.8'
-jsonschema-specifications==2023.7.1 ; python_version >= '3.8'
-lru-dict==1.2.0
-mako==1.2.4 ; python_version >= '3.7'
-markupsafe==2.1.3 ; python_version >= '3.7'
-marshmallow==3.20.1 ; python_version >= '3.8'
+idna==3.3; python_version >= '3.5'
+incremental==21.3.0
+ipfshttpclient==0.8.0a2; python_full_version >= '3.6.2' and python_full_version not in '3.7.0, 3.7.1'
+itsdangerous==2.0.1; python_version >= '3.6'
+jinja2==3.0.3; python_version >= '3.6'
+jsonschema==4.4.0; python_version >= '3.7'
+libusb1==3.0.0
+lmdb==1.3.0
+lru-dict==1.1.7
+mako==1.2.0; python_version >= '3.7'
+markupsafe==2.1.1; python_version >= '3.7'
+marshmallow==3.15.0; python_version >= '3.7'
 maya==0.6.1
-mnemonic==0.20 ; python_version >= '3.5'
-msgpack==1.0.7 ; python_version >= '3.8'
+mnemonic==0.20; python_version >= '3.5'
+msgpack==1.0.3; python_version >= '3.8'
 msgpack-python==0.5.6
-multidict==5.2.0 ; python_version >= '3.6'
-mypy-extensions==1.0.0 ; python_version >= '3.5'
-git+https://github.com/nucypher/nucypher.git@c0d12e14e4526f3fb3549a1176d0b2a79923c5ca#egg=nucypher
-nucypher-core==0.13.0
-packaging==23.2 ; python_version >= '3.7'
-parsimonious==0.9.0
-pendulum==3.0.0b1 ; python_version >= '3.8'
-prometheus-client==0.18.0
-protobuf==4.25.0rc2 ; python_version >= '3.8'
-py-ecc==6.0.0 ; python_version >= '3.6' and python_version < '4'
-py-evm==0.7.0a4
-pyasn1==0.5.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-pyasn1-modules==0.3.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+multiaddr==0.0.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+multidict==6.0.2; python_version >= '3.7'
+mypy-extensions==0.4.3; python_version >= '3.5'
+netaddr==0.8.0
+nucypher==6.1.0; python_version >= '3'
+nucypher-core==0.2.0
+packaging==21.3; python_version >= '3.6'
+parsimonious==0.8.1
+pendulum==2.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+pillow==9.1.0; python_version >= '3.7'
+prometheus-client==0.19.0; python_version >= '3.8'
+protobuf==3.20.1; python_version >= '3.7'
+py-ecc==5.2.0; python_version >= '3.5' and python_version < '4'
+py-evm==0.5.0a3
+pyasn1==0.4.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+pyasn1-modules==0.2.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 pychalk==2.0.1
 pycparser==2.21
-pycryptodome==3.19.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+pycryptodome==3.14.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pyethash==0.1.27
-pynacl==1.5.0 ; python_version >= '3.6'
-pyopenssl==23.2.0 ; python_version >= '3.6'
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-python-slugify==8.0.1
-pytz==2023.3.post1
-pyunormalize==15.0.0 ; python_version >= '3.6'
-pyyaml==6.0.1
-referencing==0.30.2 ; python_version >= '3.8'
-regex==2023.10.3 ; python_version >= '3.7'
-requests==2.31.0
-rlp==3.0.0
-rpds-py==0.10.6 ; python_version >= '3.8'
-semantic-version==2.10.0 ; python_version >= '2.7'
-service-identity==23.1.0 ; python_version >= '3.8'
-setuptools==68.2.2 ; python_version >= '3.8'
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+pynacl==1.5.0; python_version >= '3.6'
+pyopenssl==22.0.0; python_version >= '3.6'
+pyparsing==3.0.8; python_full_version >= '3.6.8'
+pyrsistent==0.18.1; python_version >= '3.7'
+pysha3==1.0.2
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-slugify==8.0.2; python_version >= '3.7'
+pytz==2022.1
+pytzdata==2020.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyyaml==6.0.1; python_version >= '3.6'
+qrcode[pil]==7.3.1; python_version >= '3.6'
+regex==2022.3.2; python_version >= '3.6'
+requests==2.27.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+rlp==2.0.1
+semantic-version==2.9.0; python_version >= '2.7'
+service-identity==21.1.0; python_version >= '3.8'
+setuptools==62.1.0; python_version >= '3.7'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 snaptime==0.2.4
 sortedcontainers==2.4.0
-tabulate==0.9.0 ; python_version >= '3.7'
+tabulate==0.8.9; python_version >= '3.7'
 text-unidecode==1.3
-time-machine==2.13.0 ; python_version >= '3.8'
-toolz==0.12.0 ; python_version >= '3.5'
-trie==2.1.1 ; python_version >= '3.7' and python_version < '4'
-twisted==23.8.0 ; python_full_version >= '3.7.1'
-txaio==23.1.1 ; python_version >= '3.7'
-typing-extensions==4.8.0 ; python_version >= '3.8'
-tzdata==2023.3 ; python_version >= '2'
-tzlocal==5.2 ; python_version >= '3.8'
-urllib3==2.0.7 ; python_version >= '3.7'
-watchdog==3.0.0 ; python_version >= '3.7'
-web3==6.11.1 ; python_full_version >= '3.7.2'
-websockets==12.0 ; python_version >= '3.8'
-werkzeug==3.0.1 ; python_version >= '3.8'
-yarl==1.9.2 ; python_version >= '3.7'
-zope-interface==6.1 ; python_version >= '3.7'
+toolz==0.11.2; python_version >= '3.5'
+trezor==0.13.0; python_version >= '3.6'
+trie==2.0.0a5; python_version >= '3.6' and python_version < '4'
+twisted==22.4.0; python_full_version >= '3.6.7'
+txaio==22.2.1; python_version >= '3.6'
+typing-extensions==3.10.0.2; python_version >= '3.8'
+tzlocal==2.1; python_version >= '3.8'
+urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+varint==1.0.2
+watchdog==2.1.7; python_version >= '3.6'
+web3==6.0.0b1; python_version < '3.11' and python_version >= '3.7'
+websockets==10.3; python_version >= '3.7'
+werkzeug==2.1.1; python_version >= '3.7'
+yarl==1.7.2; python_version >= '3.6'
+zope.interface==5.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
